kustomize-happy-cms/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: happy-cms
  labels:
    name: happy-cms
    monokle.io/demo: kustomize-happy-cms
spec:
  rules:
    - host: api.example.local
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: happy-cms
                port:
                  number: 80
